# backend

./: .gitattributes  .gitignore  .remarkrc.yml  Dockerfile  README.md  pyproject.toml  start-server.sh
.github/: dependabot.yml
.github/scripts/: python_style.py
.github/scripts/deploy/: Dockerfile  deploy.yml  inventory  local_test.yml  server_setup.yml  test_image.yml
.github/workflows/: deploy.yml  reviewdog_common.yml  reviewdog_python.yml  test.yml
backend/: README.md
backend/accounts/: admin.py  apps.py  auth_strategy.py  authentication_backend.py  email_sending.py  models.py  serializers.py  signals.py  urls.py  user_manager.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0002_customuser_is_email_confirmed_emailconfirmationtoken.py  0003_alter_profile_avatar.py  0003_profile.py  0004_passwordresettoken.py  0005_emailforchanging.py  0006_rename_emailforchanging_changedemail.py
backend/accounts/services/: email.py
backend/accounts/validators/: common.py  password_validation.py
backend/chat/: admin.py  consumers.py  jwt_auth_middleware.py  models.py  permissions.py  routing.py  serializer.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_alter_chat_creator_alter_chat_img_alter_chat_url.py  0002_alter_chat_description.py  0003_message.py  (+17 more)
backend/config/: .env_template  __init__.py  asgi.py  files.py  logger.py  schema.py  settings.py  settings_prod.py  settings_prod_secure.py  settings_test.py  swagger.py  urls.py  utils.py  wsgi.py
backend/emails/: admin.py  models.py
backend/files/: admin.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/login/: apps.py  authenticate.py  authentication_backend.py  cookie.py  openapi_custom_auth_extension.py  social_auth_strategy.py  urls.py  views.py
backend/registration/: email_sending.py  serializers.py  urls.py  views.py
backend/test/: test_login.py
backend/tests/: chat_example.html  conftest.py  js_requests.html  login_example.html  pkce_example.html  test.py  test_all_users_view.py  test_confirm_email.py  test_get_jwt.py  test_login.py  test_register_views.py  test_reset_password.py  test_swagger.py  tests_register_views.py
doc/: Accounts.md  Authentication.md  Backend.md  ChatAPI.md  Deployment.md  ErrorResponses.md  Login.md  MessageAPI.md  README.md  Registration.md  WSEvents.md
(+39 files in other folders)
