[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Approximator <alex@nls.la>", "Olha Aliakina <olusiabn@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
django-rest-knox = "^4.2.0"
djoser = "^2.2.0"
django-cors-headers = "^4.1.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.26.2"
whitenoise = "^6.5.0"
pillow = "^9.5.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] [%(filename)s:%(lineno)s] %(message)s"
addopts = "--capture=no --show-capture=all"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
